--- a/css/index.css
+++ b/css/index.css
@@ -34,6 +34,9 @@ strong {
 .main-intro {
   background-image: url(../image/egg.jpg);
   background-color: #464646;
+  padding: 0 0.5em 2em;
   display: flex;
   flex-direction: column;
+}
+.main-content {
 }
