--- a/css/index.css
+++ b/css/index.css
@@ -23,10 +23,12 @@ h2 + p {
   font-weight: 700;
   font-size: 1rem;
   text-transform: uppercase;
+  margin-top: 0;
 }
 
 h2 {
   font-size: 1.5rem;
+  margin: 0;
 }
 strong {
   font-weight: 700;
