--- a/css/index.css
+++ b/css/index.css
@@ -45,4 +45,10 @@ strong {
   padding: 2em 1em;
 }
 
-/* The media screens will be set below */
+/* 
+----------------------------------
+
+The media screens will be set below 
+
+----------------------------------
+*/
