--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,6 @@ body {
   margin: 0;
   font-size: 10px;
   font-family: "Source Sans Pro", sans-serif;
-  font-size: 1rem;
   color: #fff;
   text-align: center;
 }
@@ -59,6 +58,7 @@ The media screens will be set below
  {
   body {
     font-size: 2rem;
+    display: flex;
   }
   h1 {
     font-size: 5rem;
