--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,7 @@ body {
 
 h1 {
   font-size: 3rem;
-  font-weight: 500;
+  font-weight: 300;
   margin: 2em;
 }
 
@@ -60,7 +60,10 @@ The media screens will be set below
     display: flex;
     margin: 0;
   }
-  .main-content {
+  .main-content,
+  .main-intro {
+    width: 50%;
+    min-height: 100vh;
   }
   h1 {
     font-size: 5rem;
