--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-size: 10px;
@@ -7,9 +11,9 @@ body {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 300;
-  margin: 2em;
+  margin: 1.5em;
 }
 
 .register {
